--- a/src/html/intervenants.html
+++ b/src/html/intervenants.html
@@ -14,99 +14,348 @@
 	<body>
 		<h1> Fiche détail de l'intervenant + <b>NOM INTERVENANT</b> </h1>
 
-		<h2> Détails de l'intervenant </h2>
+		<section>
+			<h2> Semestre 1 </h2>
 
 
-		<table class = "infosIntervenants">
-			<thead>
-				<tr>
-					<th                    > Code du module  </th>
-					<th class = "nomModule"> Nom du module   </th>
-					<th                    > NB heures CM    </th>
-					<th                    > NB heures TD    </th>
-					<th                    > NB heures TP    </th>
-					<th                    > NB heures H tut </th>
-					<th                    > NB heures REH   </th>
-					<th                    > NB heures SAÉ   </th>
-					<th                    > NB heures HP    </th>
-				</tr>
-			</thead>
+			<table class = "infosIntervenants">
 
-			<tbody>
-				<tr>
-					<td> R1.01 </td>
-					<td> Initiation développement </td>
-					<td> 6  </td>
-					<td> 20 </td>
-					<td> 20 </td>
-					<td> 5  </td>
-					<td> 0  </td>
-					<td> 0  </td>
-					<td> 0  </td>
-				</tr>
+				<thead>
+					<tr>
+						<th                       > Code du module    </th>
+						<th class = "nomModule"   > Nom du module     </th>
+						<th class = "heure"       > CM                </th>
+						<th class = "heure"       > TD                </th>
+						<th class = "heure"       > TP                </th>
+						<th class = "heure"       > H tut             </th>
+						<th class = "heure"       > REH               </th>
+						<th class = "heure"       > SAÉ               </th>
+						<th class = "heure"       > HP                </th>
+						<th class = "total heure" > Total             </th>
+					</tr>
+				</thead>
 
-				<tr>
-					<td> R1.02 </td>
-					<td> Initiation développement Web </td>
-					<td> 6  </td>
-					<td> 20 </td>
-					<td> 20 </td>
-					<td> 5  </td>
-					<td> 0  </td>
-					<td> 0  </td>
-					<td> 0  </td>
-				</tr>
+				<tbody>
+					<tr>
+						<td> R1.01 </td>
+						<td> Initiation développement </td>
+						<td> 6  </td>
+						<td> 20 </td>
+						<td> 20 </td>
+						<td> 5  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td class = "total"> 51 </td>
+					</tr>
 
-				<tr>
-					<td> R1.01 </td>
-					<td> Initiation développement </td>
-					<td> 6  </td>
-					<td> 20 </td>
-					<td> 20 </td>
-					<td> 5  </td>
-					<td> 0  </td>
-					<td> 0  </td>
-					<td> 0  </td>
-				</tr>
+					<tr>
+						<td> R1.02 </td>
+						<td> Initiation développement Web </td>
+						<td> 6  </td>
+						<td> 20 </td>
+						<td> 20 </td>
+						<td> 5  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td class = "total"> 51 </td>
+					</tr>
 
-				<tr>
-					<td> R1.02 </td>
-					<td> Initiation développement Web </td>
-					<td> 6  </td>
-					<td> 20 </td>
-					<td> 20 </td>
-					<td> 5  </td>
-					<td> 0  </td>
-					<td> 0  </td>
-					<td> 0  </td>
-				</tr>
+					<tr>
+						<td> R1.01 </td>
+						<td> Initiation développement </td>
+						<td> 6  </td>
+						<td> 20 </td>
+						<td> 20 </td>
+						<td> 5  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td class = "total"> 51 </td>
+					</tr>
+
+					<tr>
+						<td> R1.02 </td>
+						<td> Initiation développement Web </td>
+						<td> 6  </td>
+						<td> 20 </td>
+						<td> 20 </td>
+						<td> 5  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td class = "total"> 51 </td>
+					</tr>
+
+					<tr class = "final">
+						<td class = "tdFinal" colspan = "2"> Total pour le semestre 1 </td>
+						<td class = "tdFinal"> 24  </td>
+						<td class = "tdFinal"> 80  </td>
+						<td class = "tdFinal"> 80  </td>
+						<td class = "tdFinal"> 20  </td>
+						<td class = "tdFinal">  0  </td>
+						<td class = "tdFinal">  0  </td>
+						<td class = "tdFinal">  0  </td>
+						<td class = "totalFinal" > 204 </td>
+					</tr>
+				</tbody>
+
+			</table>
+
+		</section>
 
 
-				<tr class = "autreSemestre">
-					<td> R2.01 </td>
-					<td> Initiation développement </td>
-					<td> 6  </td>
-					<td> 20 </td>
-					<td> 20 </td>
-					<td> 5  </td>
-					<td> 0  </td>
-					<td> 0  </td>
-					<td> 0  </td>
-				</tr>
+		<section>
+			<h2> Semestre 2 </h2>
 
-				<tr>
-					<td> R2.02 </td>
-					<td> Initiation développement Web </td>
-					<td> 6  </td>
-					<td> 20 </td>
-					<td> 20 </td>
-					<td> 5  </td>
-					<td> 0  </td>
-					<td> 0  </td>
-					<td> 0  </td>
-				</tr>
-			</tbody>
-		</table>
+
+			<table class = "infosIntervenants">
+
+				<thead>
+					<tr>
+						<th                       > Code du module    </th>
+						<th class = "nomModule"   > Nom du module     </th>
+						<th class = "heure"       > CM                </th>
+						<th class = "heure"       > TD                </th>
+						<th class = "heure"       > TP                </th>
+						<th class = "heure"       > H tut             </th>
+						<th class = "heure"       > REH               </th>
+						<th class = "heure"       > SAÉ               </th>
+						<th class = "heure"       > HP                </th>
+						<th class = "total heure" > Total             </th>
+					</tr>
+				</thead>
+
+				<tbody>
+					<tr>
+						<td> R2.01 </td>
+						<td> Initiation développement </td>
+						<td> 6  </td>
+						<td> 20 </td>
+						<td> 20 </td>
+						<td> 5  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td class = "total"> 51 </td>
+					</tr>
+
+					<tr>
+						<td> R2.02 </td>
+						<td> Initiation développement Web </td>
+						<td> 6  </td>
+						<td> 20 </td>
+						<td> 20 </td>
+						<td> 5  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td class = "total"> 51 </td>
+					</tr>
+
+					<tr>
+						<td> R2.01 </td>
+						<td> Initiation développement </td>
+						<td> 6  </td>
+						<td> 20 </td>
+						<td> 20 </td>
+						<td> 5  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td class = "total"> 51 </td>
+					</tr>
+
+					<tr>
+						<td> R2.02 </td>
+						<td> Initiation développement Web </td>
+						<td> 6  </td>
+						<td> 20 </td>
+						<td> 20 </td>
+						<td> 5  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td class = "total"> 51 </td>
+					</tr>
+
+					<tr class = "final">
+						<td class = "tdFinal" colspan = "2"> Total pour le semestre 1 </td>
+						<td class = "tdFinal"> 24  </td>
+						<td class = "tdFinal"> 80  </td>
+						<td class = "tdFinal"> 80  </td>
+						<td class = "tdFinal"> 20  </td>
+						<td class = "tdFinal">  0  </td>
+						<td class = "tdFinal">  0  </td>
+						<td class = "tdFinal">  0  </td>
+						<td class = "totalFinal" > 204 </td>
+					</tr>
+				</tbody>
+
+			</table>
+
+		</section>
+
+
+		<section>
+			<h2> Semestre 3 </h2>
+
+
+			<table class = "infosIntervenants">
+
+				<thead>
+					<tr>
+						<th                       > Code du module    </th>
+						<th class = "nomModule"   > Nom du module     </th>
+						<th class = "heure"       > CM                </th>
+						<th class = "heure"       > TD                </th>
+						<th class = "heure"       > TP                </th>
+						<th class = "heure"       > H tut             </th>
+						<th class = "heure"       > REH               </th>
+						<th class = "heure"       > SAÉ               </th>
+						<th class = "heure"       > HP                </th>
+						<th class = "total heure" > Total             </th>
+					</tr>
+				</thead>
+
+				<tbody>
+					<tr>
+						<td> R3.01 </td>
+						<td> Initiation développement </td>
+						<td> 6  </td>
+						<td> 20 </td>
+						<td> 20 </td>
+						<td> 5  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td class = "total"> 51 </td>
+					</tr>
+
+					<tr>
+						<td> R3.02 </td>
+						<td> Initiation développement Web </td>
+						<td> 6  </td>
+						<td> 20 </td>
+						<td> 20 </td>
+						<td> 5  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td class = "total"> 51 </td>
+					</tr>
+
+					<tr>
+						<td> R3.01 </td>
+						<td> Initiation développement </td>
+						<td> 6  </td>
+						<td> 20 </td>
+						<td> 20 </td>
+						<td> 5  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td class = "total"> 51 </td>
+					</tr>
+
+					<tr>
+						<td> R3.02 </td>
+						<td> Initiation développement Web </td>
+						<td> 6  </td>
+						<td> 20 </td>
+						<td> 20 </td>
+						<td> 5  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td> 0  </td>
+						<td class = "total"> 51 </td>
+					</tr>
+
+					<tr class = "final">
+						<td class = "tdFinal" colspan = "2"> Total pour le semestre 1 </td>
+						<td class = "tdFinal"> 24  </td>
+						<td class = "tdFinal"> 80  </td>
+						<td class = "tdFinal"> 80  </td>
+						<td class = "tdFinal"> 20  </td>
+						<td class = "tdFinal">  0  </td>
+						<td class = "tdFinal">  0  </td>
+						<td class = "tdFinal">  0  </td>
+						<td class = "totalFinal" > 204 </td>
+					</tr>
+				</tbody>
+
+			</table>
+
+		</section>
+
+
+		<section>
+			<h2> Statistiques </h2>
+
+			<table class = "statsIntervenants">
+
+				<thead>
+					<tr>
+						<th class = "statsS"   > Semestre </th>
+						<th class = "statsSimp"> S1 S3 S5 </th>
+						<th class = "statsSpai"> S2 S4 S6 </th>
+						<th class = "statsStot"> Total    </th>
+					</tr>
+				</thead>
+
+				<tbody>
+					<tr>
+						<td> S1 </td>
+						<td> 204 </td>
+						<td>     </td>
+						<td class = "statsTotalTd"> 204 </td>
+					</tr>
+
+					<tr>
+						<td> S2 </td>
+						<td>     </td>
+						<td> 204 </td>
+						<td class = "statsTotalTd"> 204 </td>
+					</tr>
+
+					<tr>
+						<td> S3 </td>
+						<td> 204 </td>
+						<td>     </td>
+						<td class = "statsTotalTd"> 204 </td>
+					</tr>
+
+					<tr>
+						<td> S4 </td>
+						<td>    </td>
+						<td>  0 </td>
+						<td class = "statsTotalTd">  0 </td>
+					</tr>
+
+					<tr>
+						<td> S5 </td>
+						<td>  0 </td>
+						<td>    </td>
+						<td class = "statsTotalTd">  0 </td>
+					</tr>
+
+					<tr>
+						<td> S6 </td>
+						<td>    </td>
+						<td>  0 </td>
+						<td class = "statsTotalTd">  0 </td>
+					</tr>
+
+					<tr class = "statsTotal">
+						<td class = "statsAutre" colspan = "2"></td>
+						<td class = "statsAutre"> <b>TOTAL</b> </td>
+						<td class = "statsResTot"> 812   </td>
+					</tr>
+				</tbody>
+
+			</table>
+		</section>
 	</body>
 
 </html>
