--- a/src/html/intervenants.html
+++ b/src/html/intervenants.html
@@ -181,7 +181,7 @@
 					</tr>
 
 					<tr class = "final">
-						<td class = "tdFinal" colspan = "2"> Total pour le semestre 1 </td>
+						<td class = "tdFinal" colspan = "2"> Total pour le semestre 2 </td>
 						<td class = "tdFinal"> 24  </td>
 						<td class = "tdFinal"> 80  </td>
 						<td class = "tdFinal"> 80  </td>
@@ -273,7 +273,7 @@
 					</tr>
 
 					<tr class = "final">
-						<td class = "tdFinal" colspan = "2"> Total pour le semestre 1 </td>
+						<td class = "tdFinal" colspan = "2"> Total pour le semestre 3 </td>
 						<td class = "tdFinal"> 24  </td>
 						<td class = "tdFinal"> 80  </td>
 						<td class = "tdFinal"> 80  </td>
@@ -290,17 +290,18 @@
 		</section>
 
 
-		<section>
-			<h2> Statistiques </h2>
+		<hr>
 
-			<table class = "statsIntervenants">
+
+		<section>
+			<h2> Récapitulatif </h2>
+
+			<table class = "statsIntervenants tab1">
 
 				<thead>
 					<tr>
-						<th class = "statsS"   > Semestre </th>
-						<th class = "statsSimp"> S1 S3 S5 </th>
-						<th class = "statsSpai"> S2 S4 S6 </th>
-						<th class = "statsStot"> Total    </th>
+						<th class = "statsS"   > Semestre        </th>
+						<th class = "statsStot"> Nombre d'heures </th>
 					</tr>
 				</thead>
 
@@ -308,49 +309,65 @@
 					<tr>
 						<td> S1 </td>
 						<td> 204 </td>
-						<td>     </td>
-						<td class = "statsTotalTd"> 204 </td>
 					</tr>
 
 					<tr>
 						<td> S2 </td>
-						<td>     </td>
 						<td> 204 </td>
-						<td class = "statsTotalTd"> 204 </td>
 					</tr>
 
 					<tr>
 						<td> S3 </td>
 						<td> 204 </td>
-						<td>     </td>
-						<td class = "statsTotalTd"> 204 </td>
 					</tr>
 
 					<tr>
 						<td> S4 </td>
-						<td>    </td>
 						<td>  0 </td>
-						<td class = "statsTotalTd">  0 </td>
 					</tr>
 
 					<tr>
 						<td> S5 </td>
 						<td>  0 </td>
-						<td>    </td>
-						<td class = "statsTotalTd">  0 </td>
 					</tr>
 
 					<tr>
 						<td> S6 </td>
-						<td>    </td>
 						<td>  0 </td>
-						<td class = "statsTotalTd">  0 </td>
 					</tr>
 
 					<tr class = "statsTotal">
-						<td class = "statsAutre" colspan = "2"></td>
-						<td class = "statsAutre"> <b>TOTAL</b> </td>
-						<td class = "statsResTot"> 812   </td>
+						<td> <b>TOTAL</b> </td>
+						<td> <b>812</b>   </td>
+					</tr>
+				</tbody>
+
+			</table>
+
+
+			<table class = "statsIntervenants tab2">
+
+				<thead>
+					<tr>
+						<th class = "statsS"   > Semestre        </th>
+						<th class = "statsStot"> Nombre d'heures </th>
+					</tr>
+				</thead>
+
+				<tbody>
+					<tr>
+						<td> S1 S3 S5 </td>
+						<td> 408 </td>
+					</tr>
+
+					<tr>
+						<td> S2 S4 S6 </td>
+						<td> 204 </td>
+					</tr>
+
+					<tr class = "statsTotal">
+						<td> <b>TOTAL</b> </td>
+						<td> <b>812</b>   </td>
 					</tr>
 				</tbody>
 
