--- a/src/html/modules.html
+++ b/src/html/modules.html
@@ -18,15 +18,15 @@
 		<table class = "infosModule">
 			<thead>
 				<tr>
-					<th                    > Nom intervenant    </th>
-					<th class = "nomModule"> Prénom intervenant </th>
-					<th                    > NB heures CM       </th>
-					<th                    > NB heures TD       </th>
-					<th                    > NB heures TP       </th>
-					<th                    > NB heures H tut    </th>
-					<th                    > NB heures REH      </th>
-					<th                    > NB heures SAÉ      </th>
-					<th                    > NB heures HP       </th>
+					<th> Nom    </th>
+					<th> Prénom </th>
+					<th> CM     </th>
+					<th> TD     </th>
+					<th> TP     </th>
+					<th> H tut  </th>
+					<th> REH    </th>
+					<th> SAÉ    </th>
+					<th> HP     </th>
 				</tr>
 			</thead>
 
