Page HTML intervenant fonctionnelle

--- a/src/html/intervenants.html
+++ b/src/html/intervenants.html
@@ -253,7 +253,7 @@
 						<td> 20 </td>
 						<td> 20 </td>
 						<td> 5  </td>
-						<td> 0  </td>
+						<td> 0  </td>'fr' name = 'BOULOCHE Eleonore
 						<td> 0  </td>
 						<td> 0  </td>
 						<td class = "total"> 51 </td>
