--- a/src/html/modules.html
+++ b/src/html/modules.html
@@ -64,10 +64,10 @@
 					<td> 5  </td>
 					<td> 0  </td>
 					<td> 0  </td>
-					<td> 0  </td>
+					<td class = "totalModule"> 0  </td>
 				</tr>
 
-				<tr>
+				<tr class = "statsTotalModule">
 					<td> GENS 4 </td>
 					<td> TRUC MUCHE </td>
 					<td> 6  </td>
@@ -76,7 +76,7 @@
 					<td> 5  </td>
 					<td> 0  </td>
 					<td> 0  </td>
-					<td> 0  </td>
+					<td class = "totalFinalModule"> 0  </td>
 				</tr>
 			</tbody>
 		</table>
